# sdk-tools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
build-tools/: CMakeLists.aapt.txt  CMakeLists.aapt2.txt  CMakeLists.aidl.txt  CMakeLists.dexdump.txt  CMakeLists.split-select.txt  CMakeLists.txt  aapt.cmake  aapt2.cmake  aidl.cmake  dexdump.cmake  zipalign.cmake
lib/: CMakeLists.libandroidfw.txt  CMakeLists.libbase.txt  CMakeLists.libbuildversion.txt  CMakeLists.libcrypto.txt  CMakeLists.libcutils.txt  CMakeLists.libdiagnoseusb.txt  CMakeLists.libfsmgr.txt  CMakeLists.libincfs.txt  CMakeLists.liblog.txt  CMakeLists.libpcre2.txt  CMakeLists.libpng.txt  CMakeLists.libselinux.txt  CMakeLists.libsepol.txt  CMakeLists.libsparse.txt  CMakeLists.libusb.txt  CMakeLists.libutils.txt  CMakeLists.libziparchive.txt  CMakeLists.txt  libabsl.cmake  libandroidfw.cmake  libcutils.cmake  libdiagnoseusb.cmake  libincfs.cmake  libmdnssd.cmake  libopenscreen.cmake  libprotoc.cmake  libsepol.cmake  libziparchive.cmake
patches/: dns_sd_service_watcher.h.patch  instruction_set.h.patch  mem_map.cc.patch  perms.c.patch  sliad.c.patch
platform-tools/: CMakeLists.adb.txt  CMakeLists.dmtracedump.txt  CMakeLists.e2fsprogs.txt  CMakeLists.f2fs-tools.txt  CMakeLists.fastboot.txt  CMakeLists.sqlite3.txt  CMakeLists.txt  adb.cmake  etc1tool.cmake  fastboot.cmake  hprof-conv.cmake  sqlite3.cmake
src/frameworks/base/tools/aapt2/frameworks/base/tools/aapt2/: Resources.pb.cc  Resources.pb.h
src/libbuildversion/: libbuildversion.cpp
src/libbuildversion/include/: platform_tools_version.h
